Fixed `overflow: hidden` to be ignored with border-radius and CSS transforms in Webkit for panel-teaser in gradient and almost flat theme

--- a/themes/gradient/panel.less
+++ b/themes/gradient/panel.less
@@ -100,6 +100,8 @@
 		border-top-left-radius: @global-border-radius;
         border-top-right-radius: @global-border-radius;
         overflow: hidden;
+        // Fixed `overflow: hidden` to be ignored with border-radius and CSS transforms in Webkit
+        -webkit-transform: translateZ(0);
     }
 
 }
